# podinfo

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: github_actions.yaml
deployment/: deployment.yaml  ingress.yaml  service.yaml
src/: error.rs  handler.rs  lib.rs  main.rs  startup.rs  telemetry.rs
