[package]
name = "podinfo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = 'abort'

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.2"
figlet-rs = "0.1.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.2"
tracing-log = "0.1.1"
tower-http = { version = "0.1", features = ["trace"] }
tower = { version = "0.4", features = ["util", "timeout"] }
gethostname = "0.2.1"